src/test/custom/valid/jump/forBreak.wacc
# an infinite for-loop with a break statement

# Output:
# 0

# Program:

begin
  int code = 14;
  for (int i = 0; i > -1; i = i + 1) do
    code = i;
    break;
    println "This line should not be printed"
  done;
  println code
end